- installing the headers into a soccer subdir

--- a/plugin/soccer/Makefile.am
+++ b/plugin/soccer/Makefile.am
@@ -2,66 +2,70 @@ pkglib_LTLIBRARIES = soccer.la
 
 soccer_la_SOURCES = export.cpp \
 agentstate/agentstate.cpp \
-agentstate/agentstate.h \
 agentstate/agentstate_c.cpp \
 agentstateperceptor/agentstateperceptor.cpp \
-agentstateperceptor/agentstateperceptor.h \
 agentstateperceptor/agentstateperceptor_c.cpp \
-ball/ball.cpp ball/ball.h ball/ball_c.cpp \
+ball/ball.cpp ball/ball_c.cpp \
 ballstateaspect/ballstateaspect.cpp \
-ballstateaspect/ballstateaspect.h \
 ballstateaspect/ballstateaspect_c.cpp \
-createeffector/createaction.h \
 createeffector/createeffector.cpp \
-createeffector/createeffector.h \
 createeffector/createeffector_c.cpp \
-driveeffector/driveaction.h \
 driveeffector/driveeffector.cpp \
-driveeffector/driveeffector.h \
 driveeffector/driveeffector_c.cpp \
-beameffector/beamaction.h \
-beameffector/beameffector.h \
 beameffector/beameffector.cpp \
 beameffector/beameffector_c.cpp \
-fieldflag/fieldflag.h \
 fieldflag/fieldflag_c.cpp \
 gamestateaspect/gamestateaspect.cpp \
-gamestateaspect/gamestateaspect.h \
 gamestateaspect/gamestateaspect_c.cpp \
 gamestateperceptor/gamestateperceptor.cpp \
-gamestateperceptor/gamestateperceptor.h \
 gamestateperceptor/gamestateperceptor_c.cpp \
-initeffector/initaction.h \
 initeffector/initeffector.cpp \
-initeffector/initeffector.h \
 initeffector/initeffector_c.cpp \
-kickeffector/kickaction.h \
 kickeffector/kickeffector.cpp \
-kickeffector/kickeffector.h \
 kickeffector/kickeffector_c.cpp \
-objectstate/objectstate.h \
 objectstate/objectstate.cpp \
 objectstate/objectstate_c.cpp \
-trainercommandparser/trainercommandparser.h \
 trainercommandparser/trainercommandparser.cpp \
 trainercommandparser/trainercommandparser_c.cpp \
 sexpmonitor/sexpmonitor.cpp \
-sexpmonitor/sexpmonitor.h \
 sexpmonitor/sexpmonitor_c.cpp \
 soccerbase/soccerbase.cpp \
 soccercontrolaspect/soccercontrolaspect.cpp \
-soccercontrolaspect/soccercontrolaspect.h \
 soccercontrolaspect/soccercontrolaspect_c.cpp \
 soccerruleaspect/soccerruleaspect.cpp \
-soccerruleaspect/soccerruleaspect.h \
 soccerruleaspect/soccerruleaspect_c.cpp \
 visionperceptor/visionperceptor.cpp \
-visionperceptor/visionperceptor.h \
 visionperceptor/visionperceptor_c.cpp
 
-nobase_pkginclude_HEADERS = \
+nobase_libpkginclude_HEADERS = \
 soccertypes.h \
-soccerbase/soccerbase.h 
+agentstate/agentstate.h \
+agentstateperceptor/agentstateperceptor.h \
+ball/ball.h \
+ballstateaspect/ballstateaspect.h \
+beameffector/beamaction.h \
+beameffector/beameffector.h \
+createeffector/createaction.h \
+createeffector/createeffector.h \
+driveeffector/driveaction.h \
+driveeffector/driveeffector.h \
+fieldflag/fieldflag.h \
+gamestateaspect/gamestateaspect.h \
+gamestateperceptor/gamestateperceptor.h \
+initeffector/initaction.h \
+initeffector/initeffector.h \
+kickeffector/kickaction.h \
+kickeffector/kickeffector.h \
+objectstate/objectstate.h \
+trainercommandparser/trainercommandparser.h \
+sexpmonitor/sexpmonitor.h \
+soccerbase/soccerbase.h \
+soccercontrolaspect/soccercontrolaspect.h \
+soccerruleaspect/soccerruleaspect.h \
+visionperceptor/visionperceptor.h 
+
+## define include directory local to the pkgincludedir
+libpkgincludedir = $(includedir)/@PACKAGE@/soccer
 
 # -module tells automake we're not building a library but a loadable module
 # so we don't need the "lib" prefix in the module name
