- added openglserver/glbase.h to dist_pkgdata_DATA

--- a/lib/kerosin/Makefile.am
+++ b/lib/kerosin/Makefile.am
@@ -37,7 +37,10 @@ AM_CPPFLAGS = -I${top_srcdir}/lib -I$(top_srcdir)/lib/kerosin/sceneserver/helper
 libpkgincludedir = $(includedir)/@PACKAGE@/kerosin
 
 ## architecture independent data (scripts) to be installed and distributed
-dist_pkgdata_DATA = kerosin.rb inputserver/german.scan.rb
+dist_pkgdata_DATA = \
+	kerosin.rb \
+	inputserver/german.scan.rb \
+	openglserver/glbase.h
 
 sources = \
 fontserver/font.cpp \
