--- a/lib/oxygen/Makefile.am
+++ b/lib/oxygen/Makefile.am
@@ -99,6 +99,8 @@ physicsserver/balljoint.cpp \
 physicsserver/balljoint_c.cpp \
 physicsserver/hingejoint.cpp \
 physicsserver/hingejoint_c.cpp \
+physicsserver/sliderjoint.cpp \
+physicsserver/sliderjoint_c.cpp \
 sceneserver/basenode.cpp \
 sceneserver/basenode_c.cpp \
 sceneserver/fpscontroller.cpp \
@@ -148,6 +150,7 @@ physicsserver/velocitycontroller.h \
 physicsserver/joint.h \
 physicsserver/balljoint.h \
 physicsserver/hingejoint.h \
+physicsserver/sliderjoint.h \
 sceneserver/sceneimporter.h \
 sceneserver/basenode.h \
 sceneserver/fpscontroller.h \
