added librcssnet3D instead of rcssbase/net library

--- a/app/simspark/Makefile.am
+++ b/app/simspark/Makefile.am
@@ -3,22 +3,22 @@ bin_PROGRAMS = simspark
 endif
 
 if DEBUG
-LDADD = \
-	-lpthread -lGL -lGLU -lglut -lrcssnet \
+LDADD = -lpthread -lGL -lGLU -lglut \
 	${top_srcdir}/lib/spark/libspark_debug.la \
 	${top_srcdir}/lib/kerosin/libkerosin_debug.la \
 	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
-        ${top_srcdir}/lib/salt/libsalt_debug.la 
+        ${top_srcdir}/lib/salt/libsalt_debug.la \
+	${top_srcdir}/utility/rcssnet/librcssnet3D.la
 simspark_CXXFLAGS = -O -g -W -Wall
 else
-LDADD = \
-	-lpthread -lGL -lGLU -lglut -lrcssnet \
+LDADD = -lpthread -lGL -lGLU -lglut \
 	${top_srcdir}/lib/spark/libspark.la \
 	${top_srcdir}/lib/kerosin/libkerosin.la \
 	${top_srcdir}/lib/oxygen/liboxygen.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
-        ${top_srcdir}/lib/salt/libsalt.la 
+        ${top_srcdir}/lib/salt/libsalt.la \
+	${top_srcdir}/utility/rcssnet/librcssnet3D.la 
 simspark_CXXFLAGS = -O2
 endif
 
