--- a/app/rcssmonitor3d/lib/Makefile.am
+++ b/app/rcssmonitor3d/lib/Makefile.am
@@ -1,6 +1,6 @@
 pkglib_LIBRARIES = librcssmonitor3D.a
 # librcssmonitor3D_a_LIBADD = @RUBY_LDFLAGS@
-AM_CPPFLAGS = -I${top_srcdir}/lib -I${top_srcdir}/plugin @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
+AM_CPPFLAGS = -I${top_srcdir}/lib -I${top_srcdir}/plugin -I${top_srcdir}/utility @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
 
 ## define include directory local to the pkgincludedir
 libpkgincludedir = $(includedir)/@PACKAGE@/rcssmonitor3d
@@ -9,7 +9,6 @@ librcssmonitor3D_a_SOURCES = \
 	monitorlib.cpp \
 	communit.cpp \
 	commserver.cpp commserver_c.cpp \
-	tcpsocket.cpp \
 	monitorparser.cpp monitorparser_c.cpp\
 	gameparam.cpp \
 	gamestate.cpp
@@ -18,7 +17,6 @@ libpkginclude_HEADERS = \
 	monitorlib.h \
 	communit.h \
 	commserver.h \
-	tcpsocket.h \
 	types.h \
 	monitorparser.h \
 	gameparam.h \
