- added utility/ to the list of include directories

--- a/app/rcssmonitor3d/kerosin/Makefile.am
+++ b/app/rcssmonitor3d/kerosin/Makefile.am
@@ -25,7 +25,10 @@ endif
 
 endif
 
-AM_CPPFLAGS = -I${top_srcdir}/app/rcssmonitor3d/lib -I${top_srcdir}/lib -I${top_srcdir}/plugin @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
+AM_CPPFLAGS = \
+	-I${top_srcdir}/app/rcssmonitor3d/lib -I${top_srcdir}/lib\
+	-I${top_srcdir}/plugin -I${top_srcdir}/utility @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
+
 AM_LDFLAGS  = @RUBY_LDFLAGS@
 
 rcssmonitor3D_kerosin_SOURCES = \
