--- a/lib/oxygen/Makefile.am
+++ b/lib/oxygen/Makefile.am
@@ -99,12 +99,16 @@ physicsserver/balljoint.cpp \
 physicsserver/balljoint_c.cpp \
 physicsserver/hingejoint.cpp \
 physicsserver/hingejoint_c.cpp \
+physicsserver/fixedjoint.cpp \
+physicsserver/fixedjoint_c.cpp \
 physicsserver/sliderjoint.cpp \
 physicsserver/sliderjoint_c.cpp \
 physicsserver/universaljoint.cpp \
 physicsserver/universaljoint_c.cpp \
 physicsserver/hinge2joint.cpp \
 physicsserver/hinge2joint_c.cpp \
+physicsserver/angularmotor.cpp \
+physicsserver/angularmotor_c.cpp \
 sceneserver/basenode.cpp \
 sceneserver/basenode_c.cpp \
 sceneserver/fpscontroller.cpp \
@@ -154,9 +158,11 @@ physicsserver/velocitycontroller.h \
 physicsserver/joint.h \
 physicsserver/balljoint.h \
 physicsserver/hingejoint.h \
+physicsserver/fixedjoint.h \
 physicsserver/sliderjoint.h \
 physicsserver/universaljoint.h \
 physicsserver/hinge2joint.h \
+physicsserver/angularmotor.h \
 sceneserver/sceneimporter.h \
 sceneserver/basenode.h \
 sceneserver/fpscontroller.h \
