added automake conditional so that the plugin is build only if boost regex is available.

--- a/plugin/filesystemzip/Makefile.am
+++ b/plugin/filesystemzip/Makefile.am
@@ -1,4 +1,6 @@
+if HAVE_BOOST_REGEX
 pkglib_LTLIBRARIES = filesystemzip.la
+endif
 
 filesystemzip_la_SOURCES = export.cpp \
 filesystemzip.cpp filesystemzip.h \
