added bindings.rb to the list of files

--- a/app/rcssmonitor3d/kerosin/Makefile.am
+++ b/app/rcssmonitor3d/kerosin/Makefile.am
@@ -32,6 +32,4 @@ AM_LDFLAGS  = @RUBY_LDFLAGS@
 rcssmonitor3D_kerosin_SOURCES = \
 	main.cpp
 
-dist_pkgdata_DATA = rcssmonitor3D-kerosin.rb
-
-
+dist_pkgdata_DATA = rcssmonitor3D-kerosin.rb bindings.rb
