--- a/app/agenttest/Makefile.am
+++ b/app/agenttest/Makefile.am
@@ -4,15 +4,13 @@ if DEBUG
 LDADD = \
 	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
-        ${top_srcdir}/lib/salt/libsalt_debug.la \
-	${top_srcdir}/utility/rcssnet/librcssnet3D.la	
+        ${top_srcdir}/lib/salt/libsalt_debug.la
 agenttest_CXXFLAGS = -O -g -W -Wall
 else
 LDADD = \
 	${top_srcdir}/lib/oxygen/liboxygen.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
-        ${top_srcdir}/lib/salt/libsalt.la \
-	${top_srcdir}/utility/rcssnet/librcssnet3D.la	
+        ${top_srcdir}/lib/salt/libsalt.la
 agenttest_CXXFLAGS = -O2
 endif
 
