--- a/app/simulator/Makefile.am
+++ b/app/simulator/Makefile.am
@@ -6,15 +6,13 @@ if DEBUG
 LDADD = \
 	${top_srcdir}/lib/oxygen/liboxygen_debug.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist_debug.la \
-        ${top_srcdir}/lib/salt/libsalt_debug.la \
-	${top_srcdir}/utility/rcssnet/librcssnet3D.la	
+        ${top_srcdir}/lib/salt/libsalt_debug.la
 rcssserver3D_CXXFLAGS = -O -g -W -Wall
 else
 LDADD = \
 	${top_srcdir}/lib/oxygen/liboxygen.la \
 	${top_srcdir}/lib/zeitgeist/libzeitgeist.la \
-        ${top_srcdir}/lib/salt/libsalt.la \
-	${top_srcdir}/utility/rcssnet/librcssnet3D.la
+        ${top_srcdir}/lib/salt/libsalt.la 
 rcssserver3D_CXXFLAGS = -O2
 endif
 
