--- a/plugin/Makefile.am
+++ b/plugin/Makefile.am
@@ -10,6 +10,7 @@ SUBDIRS = \
 	  soccer \
           rubysceneimporter\
           voidmeshimporter\
+          sparkmonitor\
 	  soundsystemfmod
 
 # filesystemrar 
