--- a/configure.ac
+++ b/configure.ac
@@ -193,6 +193,7 @@ AC_CONFIG_FILES([Makefile \
 		 app/simulator/rcsoccersim3D \
 		 app/simulator/Makefile \
 		 app/simspark/Makefile \
+		 app/monitorspark/Makefile \
 		 app/spadestest/Makefile \
 		 app/rcssmonitor3d/Makefile \
 		 app/rcssmonitor3d/lib/Makefile \
