added utility include dir

--- a/app/coretest/Makefile.am
+++ b/app/coretest/Makefile.am
@@ -25,7 +25,7 @@ LDADD = ${my_ldadd} \
 coretest_CXXFLAGS = -O2
 endif
 
-AM_CPPFLAGS = -I${top_srcdir}/lib @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
+AM_CPPFLAGS = -I${top_srcdir}/lib -I${top_srcdir}/utility @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
 
 coretest_SOURCES = main.cpp 
 EXTRA_DIST = data/monkey.wav
