--- a/app/spadestest/Makefile.am
+++ b/app/spadestest/Makefile.am
@@ -14,7 +14,7 @@ LDADD = \
 spadestest_CXXFLAGS = -O2
 endif
 
-AM_CPPFLAGS = -I${top_srcdir}/lib @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
+AM_CPPFLAGS = -I${top_srcdir}/lib -I${top_srcdir}/utility @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
 AM_LDFLAGS  = @RUBY_LDFLAGS@
 
 spadestest_SOURCES = main.cpp
