- added utility include dir

--- a/app/monitorspark/Makefile.am
+++ b/app/monitorspark/Makefile.am
@@ -21,7 +21,8 @@ LDADD = -lpthread -lGL -lGLU -lglut \
 monitorspark_CXXFLAGS = -O2
 endif
 
-AM_CPPFLAGS = -I${top_srcdir}/lib @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
+AM_CPPFLAGS = -I${top_srcdir}/lib -I${top_srcdir}/utility \
+              @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
 AM_LDFLAGS  = @RUBY_LDFLAGS@
 
 monitorspark_SOURCES = \
