- added NetClient classes

--- a/lib/oxygen/Makefile.am
+++ b/lib/oxygen/Makefile.am
@@ -138,6 +138,8 @@ simulationserver/monitorcontrol.cpp \
 simulationserver/monitorcontrol_c.cpp \
 simulationserver/netcontrol.cpp \
 simulationserver/netcontrol_c.cpp \
+simulationserver/netclient.cpp \
+simulationserver/netclient_c.cpp \
 simulationserver/netmessage.cpp \
 simulationserver/netmessage_c.cpp \
 simulationserver/netbuffer.cpp \
@@ -203,6 +205,7 @@ simulationserver/simcontrolnode.h \
 simulationserver/agentcontrol.h \
 simulationserver/monitorcontrol.h \
 simulationserver/netcontrol.h \
+simulationserver/netclient.h \
 simulationserver/netmessage.h \
 simulationserver/netbuffer.h \
 geometryserver/geometryserver.h \
