- added utility include directory

--- a/app/scenetest/Makefile.am
+++ b/app/scenetest/Makefile.am
@@ -24,7 +24,8 @@ LDADD = \
 scenetest_CXXFLAGS = -O2
 endif
 
-AM_CPPFLAGS = -I${top_srcdir}/lib @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
+AM_CPPFLAGS = -I${top_srcdir}/lib -I${top_srcdir}/utility \
+              @FREETYPE_CPPFLAGS@ @RUBY_CPPFLAGS@
 
 scenetest_SOURCES = main.cpp \
 md5mesh.cpp md5mesh.h md5mesh_c.cpp 
