--- a/plugin/Makefile.am
+++ b/plugin/Makefile.am
@@ -11,6 +11,7 @@ SUBDIRS = \
           rubysceneimporter\
           voidmeshimporter\
           sparkmonitor\
+          sceneeffector\
 	  soundsystemfmod
 
 # filesystemrar 
