- Makefile and zeitgeist export for hinge2effector, hinge2perceptor and timeperceptor

--- a/.gitignore
+++ b/.gitignore
@@ -465,6 +465,12 @@ plugin/soundsystemfmod/Makefile
 plugin/soundsystemfmod/Makefile.in
 plugin/soundsystemfmod/*.la
 plugin/soundsystemfmod/*.lo
+plugin/sparkagent/*.la
+plugin/sparkagent/*.lo
+plugin/sparkagent/.deps
+plugin/sparkagent/.libs
+plugin/sparkagent/Makefile
+plugin/sparkagent/Makefile.in
 plugin/sparkmonitor/*.la
 plugin/sparkmonitor/*.lo
 plugin/sparkmonitor/.deps
