added new classes

--- a/app/rcssmonitor3d/lib/Makefile.am
+++ b/app/rcssmonitor3d/lib/Makefile.am
@@ -8,12 +8,16 @@ libpkgincludedir = $(includedir)/@PACKAGE@/rcssmonitor3d
 librcssmonitor3D_la_SOURCES = \
 	monitorlib.cpp \
 	communit.cpp \
+	logfileserver.cpp logfileserver_c.cpp \
+	commserverbase_c.cpp \
 	commserver.cpp commserver_c.cpp \
 	gamestate.cpp gamestate_c.cpp
 
 libpkginclude_HEADERS = \
 	monitorlib.h \
 	communit.h \
+	logfileserver.h \
 	commserver.h \
+	commserverbase.h \
 	types.h \
 	gamestate.h 
