--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,9 @@ app/rcssmonitor3d/lite/*.lo
 app/rcssmonitor3d/lite/.deps
 app/rcssmonitor3d/lite/.dirstamp
 app/rcssmonitor3d/lite/.libs
+app/rcssmonitor3d/lite/Makefile
+app/rcssmonitor3d/lite/Makefile.in
+app/rcssmonitor3d/lite/rcssmonitor3D-lite
 app/scenetest/.deps
 app/scenetest/.libs
 app/scenetest/Makefile
