--- a/.gitignore
+++ b/.gitignore
@@ -426,6 +426,13 @@ plugin/soccer/objectstate/*.lo
 plugin/soccer/objectstate/.deps
 plugin/soccer/objectstate/.dirstamp
 plugin/soccer/objectstate/.libs
+plugin/soccer/sayeffector/*.la
+plugin/soccer/sayeffector/*.lo
+plugin/soccer/sayeffector/.deps
+plugin/soccer/sayeffector/.dirstamp
+plugin/soccer/sayeffector/.libs
+plugin/soccer/sayeffector/Makefile
+plugin/soccer/sayeffector/Makefile.in
 plugin/soccer/sexpmonitor/*.la
 plugin/soccer/sexpmonitor/*.lo
 plugin/soccer/sexpmonitor/.deps
