doc directory clean up

--- a/.gitignore
+++ b/.gitignore
@@ -125,14 +125,14 @@ doc/Doxyfile
 doc/Makefile
 doc/Makefile.in
 doc/html
-doc/proposal/auto
-doc/proposal/Makefile
-doc/proposal/Makefile.in
-doc/proposal/simulator3d.bbl
-doc/proposal/simulator3d.aux
-doc/proposal/simulator3d.blg
-doc/proposal/simulator3d.dvi
-doc/proposal/simulator3d.log
+doc/papers/proposal/auto
+doc/papers/proposal/Makefile
+doc/papers/proposal/Makefile.in
+doc/papers/proposal/simulator3d.bbl
+doc/papers/proposal/simulator3d.aux
+doc/papers/proposal/simulator3d.blg
+doc/papers/proposal/simulator3d.dvi
+doc/papers/proposal/simulator3d.log
 lib/Makefile
 lib/Makefile.in
 lib/kerosin/.deps
